--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <p><b>EMAIL</b></p>
 <input type="email" placeholder="EMAIL Address">
 </label>
-
-<p><b>Gender:</b></p>
-<input type="radio" value="male">Male 
-<input type="radio" value="female">Female
-
+<p><b>Gender</b></p>
+<label for="male1">Male</label>
+<input type="radio" value="male" id="male1">
+<label for="female2">Female</label>
+<input type="radio" value="female" id="female2">
 <label>
 <p><b>NIC Number:</b></p>
 <input type="text" placeholder="(without dashes)">
